--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "ts-node src/index.ts",
-    "start:dev": "nodemon src/index.ts",
-    "test": "jest",
-    "test:dev": "jest --watchAll --verbose"
+    "start:dev": "nodemon src/index.ts"
   },
   "author": "Grand Circus Detroit",
   "license": "ISC",
