--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "tsc",
     "start": "ts-node src/index.ts",
-    "start:dev": "nodemon src/index.ts"
+    "start:dev": "nodemon src/index.ts",
+    "test": "jest",
+    "test:dev": "jest --watchAll --verbose"
   },
   "author": "Grand Circus Detroit",
   "license": "ISC",
